--- a/assets/css/cv.css
+++ b/assets/css/cv.css
@@ -290,7 +290,10 @@
     width: 100vw;
     z-index: 5;
     position: fixed;
-    animation: opa 0.2s ease-in ;
+    /* animation: openNav 0.2s ease-in ; */
+   
+    transition: top ease .3s, transform ease .3s .3s;
+
     display: none;
 
 }
@@ -298,6 +301,7 @@
     height: 100%;
     width: 85%;
     position:absolute;
+    
     
     background-color: rgba(17, 17, 17, 0.96);
 }
@@ -331,13 +335,17 @@
     
 }
 
-@keyframes opa {
+@keyframes openNav {
     from {opacity: 0; width:0%}
     to {opacity: 1; width:100%}
     
   }
 
-
+@keyframes closeNav {
+    from {opacity: 1; width:100%}
+    to {opacity: 0; width:0%}
+    
+  }
 
 
 /* mobie */
