--- a/assets/css/cv.css
+++ b/assets/css/cv.css
@@ -100,8 +100,10 @@
     text-align: center;
     align-items: center;
 }
-.box-item-img{
-    
+.box-item-map{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .box-item-img img{
     height: 100%;
